cmake_minimum_required(VERSION 3.28)
project(algorithm)

set(CMAKE_CXX_STANDARD 17)

add_executable(algorithm



        bronze_3/2460.cpp
        bronze_3/9325.cpp
        bronze_2/1871.cpp
        bronze_2/1233.cpp
        bronze_2/2605.cpp
        bronze_3/3449.cpp
        bronze_3/4880.cpp
        bronze_3/4562.cpp
        bronze_3/5691.cpp
        bronze_2/2774.cpp
        bruteforce/1436.cpp
        bruteforce/2231.cpp
        bruteforce/6131.cpp
        bruteforce/1075.cpp
        bruteforce/1057.cpp
        bruteforce/3040.cpp
        greedy/5585.cpp
        bronze_3/8714.cpp
        bronze_3/11006.cpp
        bronze_3/21146.cpp
        bronze_4/5565.cpp
        bronze_4/5532.cpp
        season_2/greedy/1541.cpp
        bronze_4/4589.cpp
        season_2/math/2089.cpp
        season_2/math/1193.cpp
        bronze_4/6778.cpp
        season_2/math/4948.cpp
        season_2/math/6064.cpp
        bronze_3/3507.cpp
        bronze_4/13597.cpp
        bronze_3/17945.cpp


)