cmake_minimum_required(VERSION 3.28)
project(algorithm)

set(CMAKE_CXX_STANDARD 17)

add_executable(algorithm

        bronze_4/14652.cpp
        bronze_4/15439.cpp
        bronze_4/15474.cpp
        bronze_4/15051.cpp
        season_2/binsearch/1654.cpp
        season_2/binsearch/14921.cpp
        season_2/binsearch/1253.cpp
        bronze_4/14470.cpp
        bronze_4/20215.cpp
        bronze_3/8721.cpp
        bronze_4/15025.cpp
        bronze_3/20944.cpp
        bronze_2/2711.cpp
        bronze_3/25630.cpp
        bronze_2/2702.cpp


)