cmake_minimum_required(VERSION 3.28)
project(algorithm)

set(CMAKE_CXX_STANDARD 17)

add_executable(algorithm

        ../algorithm2/bronze_4/14652.cpp
        ../algorithm2/bronze_4/15439.cpp
        ../algorithm2/bronze_4/15474.cpp
        ../algorithm2/bronze_4/15051.cpp
        season_2/binsearch/1654.cpp
        season_2/binsearch/14921.cpp
        season_2/binsearch/1253.cpp
        ../algorithm2/bronze_4/14470.cpp
        ../algorithm2/bronze_4/20215.cpp
        ../algorithm2/bronze_3/8721.cpp
        ../algorithm2/bronze_4/15025.cpp
        ../algorithm2/bronze_3/20944.cpp
        ../algorithm2/bronze_2/2711.cpp
        ../algorithm2/bronze_3/25630.cpp
        ../algorithm2/bronze_2/2702.cpp
        ../algorithm2/math/1159.cpp
        ../algorithm2/bronze_3/18005.cpp
        ../algorithm2/bronze_2/2592.cpp
        ../algorithm2/bronze_3/11586.cpp


)